--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "i18next": "^19.8.2",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "3.4.4"
+    "react-i18next": "^11.7.3",
+    "react-redux": "^7.2.1",
+    "react-scripts": "3.4.4",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "secure-ls": "^1.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +39,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:8090"
 }
