signup page design and validations

--- a/tradeify_ws/src/main/resources/ValidationMessages.properties
+++ b/tradeify_ws/src/main/resources/ValidationMessages.properties
@@ -3,3 +3,9 @@ tradeify.constraints.email.Pattern.message = Password must have at least 1 upper
 tradeify.constraint.email.UniqueEmail.message = This email is in use
 tradeify.constraint.FileType.message = Unsupported file. Only {types} supported
 tradeify.constraint.email.Valid.message = Please enter an email address
+tradeify.constraint.phone.Valid.message = Phone number must be 11 digits
+tradeify.constraint.phone.Pattern.message = Enter numerical values only
+tradeify.constraint.date.Past.message = It must be a past date
+tradeify.constraint.gender.NotNull.message = Please select a gender
+tradeify.constraint.name.Valid.message = Name must contain only letters or spaces
+tradeify.constraint.surname.Valid.message = Surname must contain only letters or spaces
