--- a/tradeify_ws/src/main/resources/application.yaml
+++ b/tradeify_ws/src/main/resources/application.yaml
@@ -15,8 +15,8 @@ spring:
 # Oracle Settings
   datasource:
     url: jdbc:oracle:thin:@localhost:1521:xe
-    username: ${{secrets.DB}}
-    password: ${{secrets.DB_PASSWORD}} 
+    username: CALISMA
+    password: 12345 
     driver-class-name: oracle.jdbc.OracleDriver
   profiles:
     active:
@@ -27,8 +27,8 @@ spring:
   mail:
     default-encoding: UTF-8
     host: smtp.gmail.com
-    username: ${{secrets.MAIL}}
-    password: ${{secrets.MAIL_PASSWORD}}
+    username: tradeifyweb@gmail.com
+    password: MezuniyetTez19261
     port: 587
     properties:
       mail:
