unique phone number validation

--- a/tradeify_ws/src/main/resources/ValidationMessages.properties
+++ b/tradeify_ws/src/main/resources/ValidationMessages.properties
@@ -1,6 +1,7 @@
 tradeify.constraints.email.NotNull.message = Email cannot be null
 tradeify.constraints.email.Pattern.message = Password must have at least 1 uppercase, 1 lowercase letter and 1 numbers
 tradeify.constraint.email.UniqueEmail.message = This email is in use
+tradeify.constraint.phone.UniquePhone.message = This phone belongs to another account
 tradeify.constraint.FileType.message = Unsupported file. Only {types} supported
 tradeify.constraint.email.Valid.message = Please enter an email address
 tradeify.constraint.phone.Valid.message = Phone number must be 11 digits
