--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "i18next": "^19.8.2",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.7.3",
     "react-redux": "^7.2.1",
