unique email and phone update validation and changing password

--- a/tradeify_ws/src/main/resources/ValidationMessages.properties
+++ b/tradeify_ws/src/main/resources/ValidationMessages.properties
@@ -1,5 +1,5 @@
 tradeify.constraints.email.NotNull.message = Email cannot be null
-tradeify.constraints.email.Pattern.message = Password must have at least 1 uppercase, 1 lowercase letter and 1 numbers
+tradeify.constraints.password.Pattern.message = Password must have at least 1 uppercase, 1 lowercase letter and 1 numbers
 tradeify.constraint.email.UniqueEmail.message = This email is in use
 tradeify.constraint.phone.UniquePhone.message = This phone belongs to another account
 tradeify.constraint.FileType.message = Unsupported file. Only {types} supported
@@ -10,3 +10,4 @@ tradeify.constraint.date.Past.message = It must be a past date
 tradeify.constraint.gender.NotNull.message = Please select a gender
 tradeify.constraint.name.Valid.message = Name must contain only letters or spaces
 tradeify.constraint.surname.Valid.message = Surname must contain only letters or spaces
+tradeify.constraints.password.Control.message = Your password is incorrect
