adding category, product and file attachment

--- a/tradeify_ws/src/main/resources/application.yaml
+++ b/tradeify_ws/src/main/resources/application.yaml
@@ -41,9 +41,11 @@ spring:
 ---
 spring:
   profiles: production
+tradeify:  upload-path: storage-production
 ---
 spring:
   profiles: dev
   jpa:
     hibernate:
       ddl-auto: update
+tradeify:  upload-path: storage-dev
