--- a/tradeify_ws/pom.xml
+++ b/tradeify_ws/pom.xml
@@ -78,6 +78,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
+        <dependency>
+		    <groupId>org.apache.tika</groupId>
+		    <artifactId>tika-core</artifactId>
+		    <version>1.23</version>
+		</dependency>
 	</dependencies>
 
 	<build>
