product additions are completed

--- a/tradeify_ws/src/main/resources/ValidationMessages.properties
+++ b/tradeify_ws/src/main/resources/ValidationMessages.properties
@@ -11,3 +11,5 @@ tradeify.constraint.gender.NotNull.message = Please select a gender
 tradeify.constraint.name.Valid.message = Name must contain only letters or spaces
 tradeify.constraint.surname.Valid.message = Surname must contain only letters or spaces
 tradeify.constraints.password.Control.message = Your password is incorrect
+tradeify.constraints.price.Control.message = Price must be integer or decimal
+tradeify.constraint.FileType.message = Unsupported file. Only {types} supported
