product order operations

--- a/tradeify_ws/src/main/resources/ValidationMessages.properties
+++ b/tradeify_ws/src/main/resources/ValidationMessages.properties
@@ -13,3 +13,8 @@ tradeify.constraint.surname.Valid.message = Surname must contain only letters or
 tradeify.constraints.password.Control.message = Your password is incorrect
 tradeify.constraints.price.Control.message = Price must be integer or decimal
 tradeify.constraint.FileType.message = Unsupported file. Only {types} supported
+tradeify.constraint.fullname.Valid.message  = Fullname must contain only letters
+tradeify.constraint.card.Valid.message = Card number must be 16 digits
+tradeify.constraint.card.pattern.Valid.message = Card number must only contain numbers
+tradeify.constraint.cvc.Valid.message = CVC/CVV must be 3 digits
+tradeify.constraint.cvc.pattern.Valid.message =  CVC/CVV must only contain numbers
