--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,15 +7,19 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "alertifyjs": "^1.13.1",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "html-react-parser": "^1.2.1",
     "i18next": "^19.8.2",
+    "jodit-react": "^1.0.70",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-html-parser": "^2.0.2",
     "react-i18next": "^11.7.3",
     "react-multilevel-dropdown": "^1.0.5",
+    "react-quill": "^2.0.0-beta.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
